--- a/ui/node.html
+++ b/ui/node.html
@@ -63,6 +63,19 @@
             <h1>Manage your Blockchain</h1>
           </div>
         </div>
+        <div class="row">
+          <div class="col">
+            <ul class="nav nav-pills">
+              <li class="nav-item">
+                <a class="nav-link active" href="/">Wallet &amp; Node</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/network">Network</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <hr />
         <div v-if="error" class="alert alert-danger" role="alert">
           {{ error }}
         </div>
@@ -177,6 +190,9 @@
               @click="onMine"
             >
               Mine Coins
+            </button>
+            <button class="btn btn-warning" @click="onResolve">
+              Resolve Conflicts
             </button>
           </div>
         </div>
@@ -335,7 +351,7 @@
                 vm.funds = response.data.funds;
                 vm.walletLoading = false;
               })
-              .catch(function (err) {
+              .catch(function (error) {
                 vm.success = null;
                 vm.error = error.response.data.message;
                 vm.wallet = null;
@@ -357,7 +373,7 @@
                 vm.funds = response.data.funds;
                 vm.txLoading = false;
               })
-              .catch(function (err) {
+              .catch(function (error) {
                 vm.success = null;
                 vm.error = error.response.data.message;
                 vm.txLoading = false;
@@ -372,7 +388,21 @@
                 vm.success = response.data.message;
                 vm.funds = response.data.funds;
               })
-              .catch(function (err) {
+              .catch(function (error) {
+                vm.success = null;
+                vm.error = error.response.data.message;
+              });
+          },
+          onResolve: function () {
+            let vm = this;
+            axios
+              .post("/resolve-conflicts")
+              .then(function (response) {
+                vm.error = null;
+                vm.success = response.data.message;
+                
+              })
+              .catch(function (error) {
                 vm.success = null;
                 vm.error = error.response.data.message;
               });
@@ -388,7 +418,7 @@
                   vm.blockchain = response.data;
                   vm.dataLoading = false;
                 })
-                .catch(function (err) {
+                .catch(function (error) {
                   vm.dataLoading = false;
                   vm.error = "something goofed";
                 });
@@ -402,7 +432,7 @@
                   vm.openTransactions = response.data;
                   vm.dataLoading = false;
                 })
-                .catch(function (err) {
+                .catch(function (error) {
                   vm.dataLoading = false;
                   vm.error = "something else goofed";
                 });
